fix: remove scrollbar

--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,7 @@ output {
   position: relative;
   border-radius: 5px;
   overflow-y: scroll;
+  transition: 1s all;
 }
 output::-webkit-scrollbar {
   display: none; /*for Chrome, Safari, and Opera */
